# cosi-db

./: .gitignore  Cargo.toml  DESIGN.md  Dockerfile  README.md  Rocket.toml  docker-compose.yaml  dummy.rs
.github/workflows/: actions.yml  workflows.yml
public/css/: auth.css  base.css  expanded_search.css  index.css  person.css
public/forms/: person_form.html
public/img/churches/: run.sh
public/js/: actions.js  auth.js  common.js  dashboard.js  expanded_search.js  forms.js  miniboard.js  moment.locales.min.js  person.js  search_card.js  searchmanager.js  table.js
public/js/views/: house_relation.js  person.js
scripts/: README.md  ct_importer.py
src/: main.rs  routes.rs
src/cosi_db/: common.rs  connection.rs  errors.rs  generator.rs  mod.rs  person.rs
src/cosi_db/controller/: address.rs  api.rs  auth.rs  common.rs  dashboard.rs  mod.rs  person.rs
src/cosi_db/model/: address.rs  auth.rs  common.rs  event.rs  group.rs  household.rs  mod.rs  person.rs
templates/: dashboard.tera  expanded_search.tera  login.tera  person.tera
tests/: README.md  endpoints.js  household.test.js  main.test.js  package-lock.json  package.json
tools/: install.py  pre-commit
